# sup2srt

./: LICENSE  README.md  extract_subs.py  main.py  ocr.py  pyproject.toml  requirements.txt  sup_converter.py  sup_decoder.py  sup_parser.py
src/sup2srt/: __init__.py  color_stdout.py  main.py  ocr.py  spell_checker.py  sup_decoder.py  sup_parser.py
sup2srt/: README.md
sup2srt/src/sup2srt/: __init__.py  main.py  sup_converter.py
