[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sup2srt"
version = "0.1.0"
description = "Convert Blu-Ray PGS (.sup) subtitles to SRT via OCR"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Frank Hoffmann", email = "" }
]
keywords = ["subtitles", "bluray", "pgs", "srt", "ocr", "tesseract"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing",
]

dependencies = [
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "pytesseract>=0.3.13"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build",
    "twine"
]

[project.scripts]
sup2srt = "sup2srt.main:main"

[project.urls]
Homepage = ""
"Bug Tracker" = ""

[tool.hatch.build.targets.wheel]
packages = ["src/sup2srt"]