[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sup2srt"
version = "0.1.3"
description = "Convert Blu-Ray PGS (.sup) subtitles to SRT via OCR"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Frank Hoffmann", email = "frank.h.dev@protonmail.com" }
]
keywords = ["subtitles", "bluray", "pgs", "srt", "ocr", "tesseract"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing",
]

dependencies = [
    "colorama==0.4.6",
    "numpy==2.4.3",
    "pillow==12.1.1",
    "pytesseract==0.3.13",
    "language_tool_python==3.4.0"
    ]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build",
    "twine"
]

[project.scripts]
sup2srt = "sup2srt.main:main"

[project.urls]
Homepage = "https://github.com/Frank-Hoffmann-Dev/sup2srt"
"Bug Tracker" = "https://github.com/Frank-Hoffmann-Dev/sup2srt/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sup2srt"]